[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Runes/Runes.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/UITitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/UI/RuneHeario.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/RuneEario.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/RuneLuirio.png" type="Texture" id=5]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0509804, 0.109804, 0.247059, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.129412, 0.219608, 0.403922, 1 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.129412, 0.219608, 0.403922, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0823529, 0.164706, 0.360784, 1 )

[node name="Runes" type="Panel"]
margin_left = 190.0
margin_top = 180.0
margin_right = 1730.0
margin_bottom = 900.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="RuneContainer" type="Panel" parent="."]
margin_right = 550.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 2 )

[node name="Eario" type="Panel" parent="RuneContainer"]
margin_left = 250.0
margin_top = 200.0
margin_right = 314.0
margin_bottom = 264.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="Sprite" type="TextureRect" parent="RuneContainer/Eario"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )
stretch_mode = 6

[node name="Luirio" type="Panel" parent="RuneContainer"]
margin_left = 250.0
margin_top = 300.0
margin_right = 314.0
margin_bottom = 364.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="Sprite" type="TextureRect" parent="RuneContainer/Luirio"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="Heario" type="Panel" parent="RuneContainer"]
margin_left = 250.0
margin_top = 400.0
margin_right = 314.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="Sprite" type="TextureRect" parent="RuneContainer/Heario"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
stretch_mode = 6

[node name="ItemsContainer" type="ScrollContainer" parent="."]
margin_left = 550.0
margin_right = 1540.0
margin_bottom = 720.0
rect_min_size = Vector2( 990, 720 )
mouse_filter = 2

[node name="ItemsContentContainer" type="VBoxContainer" parent="ItemsContainer"]
margin_right = 990.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ItemsContainer/ItemsContentContainer"]
margin_right = 990.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = " Runes"
valign = 2

[node name="ItemList" type="VBoxContainer" parent="ItemsContainer/ItemsContentContainer"]
margin_top = 44.0
margin_right = 990.0
margin_bottom = 720.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="DragSprite" type="Sprite" parent="."]

[connection signal="mouse_entered" from="RuneContainer/Eario/Sprite" to="." method="_on_mouse_entered_rune_slot" binds= [ "Eario" ]]
[connection signal="mouse_exited" from="RuneContainer/Eario/Sprite" to="." method="_on_mouse_exited_rune_slot"]
[connection signal="mouse_entered" from="RuneContainer/Luirio/Sprite" to="." method="_on_mouse_entered_rune_slot" binds= [ "Luirio" ]]
[connection signal="mouse_exited" from="RuneContainer/Luirio/Sprite" to="." method="_on_mouse_exited_rune_slot"]
[connection signal="mouse_entered" from="RuneContainer/Heario/Sprite" to="." method="_on_mouse_entered_rune_slot" binds= [ "Heario" ]]
[connection signal="mouse_exited" from="RuneContainer/Heario/Sprite" to="." method="_on_mouse_exited_rune_slot"]
